--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coding praactice</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Practice set</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to coding platform</h1>
-    <h1 class="one">Welcome to coding platform 11</h1>
-    <h1 class="one">Welcome to coding platform 111</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora.</p>
-    <button>Click me!</button>
+  <div class="traffic-light">
+  <div class="red"></div>
+  <div class="yellow"></div>
+  <div class="green"></div>
+  </div>
 </body>
 </html>
